--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,27 @@
-# Node modules
+# Node modules for both frontend and backend
 node_modules/
 
-# Log files
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Build output
+# Build directories
 build/
 dist/
 
-# Environment variables
+# Log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment files (do not track sensitive data)
 .env
 
-# React temporary files
-.cache/
+# React-specific files
+/.cache/
 *.lock
 
-# Editor directories
+# Backend-specific files (if any)
+*.bak
+
+# Editor files
 .vscode/
 .idea/
 
@@ -25,6 +29,8 @@ dist/
 Thumbs.db
 .DS_Store
 
-# Git ignore this folder
+# Ignore frontend node_modules specifically
 frontend/node_modules/
+
+# Ignore backend node_modules specifically
 backend/node_modules/
